--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
   <head>
     <title>excursion</title>
-    <link href="./rsources/style.css" type="text/css" rel="stylesheet"
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"
   </head>
   <body>
+    <h1>Discover hidden places in the world around you</h1>
+      <p>
+        Download Excusion &#40;Coming Soon!&#41;
+      </p>
+      <video src="./resources/videos/excursion.mp4">Your browser do not support this video</video>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <img src="./resources/images/camp.jpg" />
+    <img src="./resources/images/phone.png"  />
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+      Download Excusion &#40;Coming Soon!&#41;
+    </p>
 
   </body>
 </html>
